# docs/swagger.yaml
@@ -120,8 +120,7 @@ paths:
                     error: Invalid token
           description: Invalid Authorization header
       security:
-        -
-          bearerAuth: []
+        - bearerAuth: [ ]
       summary: Logout
   /users/current:
     get:
@@ -137,8 +136,7 @@ paths:
                 User details:
                   value:
                     accounts:
-                      -
-                        balance: 10000
+                      - balance: 10000
                         currency: EUR
                         name: main
                         number: 0004184d2be7b734df8b6ddc63c19d374a8
@@ -160,8 +158,7 @@ paths:
                     error: Invalid Authorization header
           description: Unauthorized
       security:
-        -
-          bearerAuth: []
+        - bearerAuth: [ ]
       summary: Get user's details
       description: Returns instance of `user`
   /transactions:
@@ -198,6 +195,12 @@ paths:
                 Parameter shorter than the minimum allowed length:
                   value:
                     error: Path `.*` (`.*`) is shorter than the minimum allowed length
+                'Transaction validation failed: explanation: Path `explanation` is required.':
+                  value:
+                    error: >-
+                      Transaction validation failed: explanation: Path `explanation` is
+                      required.
+                  description: Bad request
         '401':
           content:
             application/json:
@@ -232,11 +235,82 @@ paths:
                     error: accountFrom not found
           description: Not found
       security:
-        -
-          bearerAuth: []
+        - bearerAuth: [ ]
       operationId: createtransaction
       summary: Create a transaction
       description: Creates a new instance of a `transaction`.
+  /transactions/b2b:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/jwt'
+        required: true
+      tags:
+        - transactions
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/transaction'
+              examples:
+                POST /transactions/b2b response:
+                  value:
+                    receiverName: Jaan Tamm
+          description: Transaction accepted
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Invalid signature:
+                  value:
+                    error: Invalid signature
+          description: Invalid signature
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Bank \w+ was not found in Central Bank:
+                  value:
+                    error: Bank \w+ was not found in Central Bank
+          description: Bank was not found in Central Bank
+        '502':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                There was an error communication with Central Bank:
+                  value:
+                    error: There was an error communication with Central Bank.*
+          description: There was an error communication with Central Bank
+      summary: Accepts transactions from other banks
+  /transactions/jwks:
+    description: ''
+    get:
+      tags:
+        - transactions
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jwks'
+          description: >-
+            Set of keys in jwks format containing the public key used to verify JSON Web Token
+            sent by the origin bank when initiating a transaction with another bank and signed
+            with the corresponding private key
+      summary: Returns JWKS for validating jwt-signatures
+      description: >-
+        Returns set of keys containing the public key used to verify JSON Web Token sent by the origin
+        bank when initiating a transaction with another bank and signed with the corresponding private
+        key
 components:
   schemas:
     user:
@@ -284,18 +358,50 @@ components:
         accountTo: 0b74184d2be7b734df8b6ddc63c19d374a8
         amount: '150'
         explanation: Don't go spend it all at once
+    jwt:
+      title: Root Type for jwt
+      description: ''
+      type: object
+      properties:
+        jwt:
+          type: string
+      example:
+        jwt: >-
+          eyJhbGciOiJSUzI1NiIsImtpZCI6IlFWaGxic05aWlk4M1lSRkhTLU9XSnFpcUVNYmpvYXFoWklpUFZSWmdXLWsifQ.eyJhY2NvdW50RnJvbSI6ImJhYmMwNmMyZjcwMzJlZWNlNDVjZmQwMzMxYWZhYjM4MzNkIiwiYWNjb3VudFRvIjoiYmFiMDcwZGRhYzhhYTk0NjZjNTVkOWI0NTEzZTlhNzg3NzQiLCJhbW91bnQiOjEwLCJjdXJyZW5jeSI6IlVTRCIsImV4cGxhbmF0aW9uIjoieHh4Iiwic2VuZGVyTmFtZSI6IlRFU1QifQ.B0UKNg9T9XPO-e7DiuyvT089AwqxhI3lQ8IsmLDtLHxzqHcbr3jAPq3eifpBfEmFU85s-ksTfZ8Pf-BmmYftRcmfcFjGL8aLUrcxf58fuNFySqjFOlIogVysFyeblqagOcJ7QJmT37rBYRTZ7pcuvQxlisdfDE8tS3aOXFD-xi8
+    jwks:
+      title: Root Type for jwks
+      description: ''
+      type: object
+      properties:
+        keys:
+          type: array
+          items:
+            type: object
+            properties:
+              kty:
+                type: string
+              kid:
+                type: string
+              'n':
+                type: string
+              e:
+                type: string
+      example:
+        keys:
+          - kty: RSA
+            kid: QVhlbsNZZY83YRFHS-OWJqiqEMbjoaqhZIiPVRZgW-k
+            'n': >-
+              RlWISHXpjWXdYGLSB99okpIW8eEL9ochaEMUyZ8bHW46CLXX-kkI8l6ue7KtxuyrWpuOpuzrHtZWp29H6fgyOq1mKZ0heK-XkV1rJoKHd-6wc0Jdpg2SPwC6BWRGcE2HnvHxT0s8pfa_GwTd7Tu27gIR2S7TVx7N86E5jxll7t0
+            e: AQAB
   securitySchemes:
     bearerAuth:
       scheme: bearer
       bearerFormat: JWT
       type: http
 tags:
-  -
-    name: sessions
+  - name: sessions
     description: ''
-  -
-    name: users
+  - name: users
     description: ''
-  -
-    name: transactions
+  - name: transactions
     description: ''
